fix comments repo
* fix comment entity
* add update metod